tests/sqlcmd/baselines/errors/remove_classes3.errbaseline
Unexpected Ad Hoc Planning Error: java.lang.RuntimeException: Error compiling query: org.voltdb.planner.PlanningErrorException: SQL Syntax error in "REMOVE sqlcmdtest.InsertEmployee" unexpected token: REMOVE
